# graphite

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts
.claude/plans/: sprightly-giggling-sedgewick.md
.claude/rules/: architecture.md  formatting.md  i18n.md  react.md  rust.md  typescript.md  zustand.md
.github/workflows/: release.yml  update-homebrew.yml
apps/desktop/: components.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/mcp-server/: package.json
docs/plans/: 2026-03-07-mcp-tauri-integration-design.md  2026-03-07-mcp-tauri-integration.md
mcp-server/: README.md  build.mjs  package-lock.json  package.json
mcp-server/src/: frontmatter.ts  server.ts  trash.ts  vault.ts
scripts/: place-mcp-binary.mjs
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: asset_commands.rs  config_commands.rs  export_commands.rs  folder_commands.rs  fs_commands.rs  init_commands.rs  mcp_commands.rs  menu_commands.rs  mod.rs  move_commands.rs  search_commands.rs  tag_commands.rs  trash_commands.rs
src-tauri/src/models/: config.rs  mod.rs  note.rs
src-tauri/src/utils/: frontmatter.rs  paths.rs
src/components/: update-toast.tsx
src/hooks/: use-command-hotkeys.ts  use-custom-css.ts  use-image-drop.ts  use-ime-guard.ts  use-panel-navigation.ts
src/i18n/: index.ts  sync-menu.ts  (+1 more)
(+203 files in other folders)
