[package]
name = "graphite"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "Graphite"
path = "src/main.rs"

[lib]
name = "graphite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
rayon = "1.10"
window-vibrancy = "0.5"
raw-window-handle = "0.6"
glob = "0.3"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry"] }
objc2-app-kit = { version = "0.3", features = ["NSMenu", "NSMenuItem", "NSEvent", "NSWindow", "NSView", "NSApplication", "NSRunningApplication", "NSResponder"] }
